Header Z-Index Fix

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -41,7 +41,7 @@ header {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 10;
+    z-index: 100;
     width: 100%;
     height: 70px;
     transition: transform 0.3s ease, background-color 0.3s ease;
@@ -249,7 +249,7 @@ a {
     display: inline-block;
     background-color: transparent;
     text-decoration: underline;
-    font-weight: 300;
+    font-weight: 400;
     font-family: 'Garamond', Georgia, 'Times New Roman', Times, serif;
     font-size: 1.125rem;
     color: #555;
